--- a/testcerts-main/.github/workflows/go.yaml
+++ b/testcerts-main/.github/workflows/go.yaml
@@ -1,10 +1,43 @@
+#name: Go
+#
+#on:
+#  push:
+#    branches: [ main, actions ]
+#  pull_request:
+#    branches: [ main, actions ]
+#
+#jobs:
+#  build:
+#    name: Go Build (CGO)
+#    runs-on: ${{ matrix.os }}
+#    strategy:
+#      matrix:
+#        os: [ubuntu-latest, macos-latest]
+#    steps:
+#    - name: Set up Go 1.x
+#      uses: actions/setup-go@v2
+#      with:
+#        go-version: ^1.20
+#      id: go
+#
+#    - name: Check out code into the Go module directory
+#      uses: actions/checkout@v2
+#
+#    - name: Test
+#      run: |
+#        go vet -v ./...
+#        go test -v -race -covermode=atomic -coverprofile=coverage.out ./...
+#
+#    - name: Upload Code Coverage
+#      if: runner.os == 'Linux'
+#      run: bash <(curl -s https://codecov.io/bash)
 name: Go
 
 on:
   push:
-    branches: [ main, actions ]
+    branches: [main, actions]
   pull_request:
-    branches: [ main, actions ]
+    branches: [main, actions]
 
 jobs:
   build:
@@ -14,20 +47,16 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest]
     steps:
-    - name: Set up Go 1.x
-      uses: actions/setup-go@v2
-      with:
-        go-version: ^1.20
-      id: go
-
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
-
-    - name: Test
-      run: |
-        go vet -v ./...
-        go test -v -race -covermode=atomic -coverprofile=coverage.out ./...
-
-    - name: Upload Code Coverage
-      if: runner.os == 'Linux'
-      run: bash <(curl -s https://codecov.io/bash)
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ^1.16
+      - name: Check out code
+        uses: actions/checkout@v2
+      - name: Test
+        run: |
+          go vet -v ./...
+          go test -v -race -covermode=atomic -coverprofile=coverage.out ./...
+      - name: Upload Code Coverage
+        if: matrix.os == 'ubuntu-latest'
+        run: bash <(curl -s https://codecov.io/bash)
