--- a/testcerts-main/.github/workflows/lint.yml
+++ b/testcerts-main/.github/workflows/lint.yml
@@ -1,4 +1,5 @@
 name: lint
+
 on:
   push:
     tags:
@@ -7,32 +8,17 @@ on:
       - actions
       - main
   pull_request:
+
 jobs:
   golangci:
     name: golangci
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: golangci-lint
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v2
         with:
-          # Optional: version of golangci-lint to use in form of v1.2 or v1.2.3 or `latest` to use the latest version
           version: latest
-
-          # Optional: working directory, useful for monorepos
-          # working-directory: somedir
-
-          # Optional: golangci-lint command line arguments.
           args: -E misspell -E revive
-
-          # Optional: show only new issues if it's a pull request. The default value is `false`.
-          # only-new-issues: true
-
-          # Optional: if set to true then the action will use pre-installed Go.
-          # skip-go-installation: true
-
-          # Optional: if set to true then the action don't cache or restore ~/go/pkg.
-          # skip-pkg-cache: true
-
-          # Optional: if set to true then the action don't cache or restore ~/.cache/go-build.
-          # skip-build-cache: true
